@@ -142,6 +142,11 @@ protected:
     virtual void DoGetSize(int *width, int *height) const;
 #endif // __WXWINCE__
 
+    // helper of SetIcons(): calls gets the icon with the size specified by the
+    // given system metrics (SM_C{X|Y}[SM]ICON) from the bundle and sets it
+    // using WM_SETICON with the specified wParam (ICOM_SMALL or ICON_BIG)
+    void DoSelectAndSetIcon(const wxIconBundle& icons, int smX, int smY, int i);
+
 
     // is the window currently iconized?
     bool m_iconized;
